@@ -2,15 +2,15 @@ Function: bnfunits
 Section: number_fields
 C-Name: bnfunits
 Prototype: GDG
-Help: bnfunits(bnf,{S}): output the fundamental units of the number field
- bnf output by bnfinit; if S is present and is a list of prime ideals compute
+Help: bnfunits(bnf,{S}): return the fundamental units of the number field
+ bnf output by bnfinit; if S is present and is a list of prime ideals, compute
  fundamental S-units instead. The first component of the result contains the
  S-units, followed by fundamental units, followed by the torsion unit.
  The result may be used as an optional argument to bnfisunit.
-Doc: output the fundamental units of the number field
- bnf output by bnfinit; if $S$ is present and is a list of prime ideals compute
- fundamental $S$-units instead. The first component of the result contains
- independent integral $S$-units generators: first non-units, then
+Doc: return the fundamental units of the number field
+ bnf output by bnfinit; if $S$ is present and is a list of prime ideals,
+ compute fundamental $S$-units instead. The first component of the result
+ contains independent integral $S$-units generators: first non-units, then
  $r_1+r_2-1$ fundamental units, then the torsion unit. The result may be used
  as an optional argument to bnfisunit. The units are given in compact form:
  no expensive computation is attempted if the \var{bnf} does not already
