@@ -3,6 +3,5 @@ Section: number_fields
 C-Name: nfmul
 Prototype: GGG
 Help: nfeltmul(nf,x,y): element x.y in nf.
-Doc:
- given two elements $x$ and $y$ in
- \var{nf}, computes their product $x*y$ in the number field $\var{nf}$.
+Doc: given two elements $x$ and $y$ in \var{nf}, computes their product $x*y$
+ in the number field $\var{nf}$.
