@@ -12,6 +12,19 @@
 -11
 1/32
 15853839
+16/9
+1
+[13, 5, 6, 2, 1]~
+[2, 0, 1, 0, 0]~
+1/4
+[-1071, -384, -251, -155, 20]~
+3/4
+-1
+[-16/31, 12/31, 4/31, -6/31, 1/31]~
+[0, 1/11, 1/11, 0, -1/11]~
+2
+[396997/15853839, -123852/5284613, 30975/5284613, -53135/15853839, -19678/15
+853839]~
 1736217747
 Mod(4/3, y^5 - 4*y^3 + 2*y + 11)
 Mod(-1, y^5 - 4*y^3 + 2*y + 11)
@@ -362,4 +375,4 @@ Mod(-6/5, x)
   ***   at top-level: nfalgtobasis(nf,['a,'a]~)
   ***                 ^-------------------------
   *** nfalgtobasis: incorrect type in nfalgtobasis (t_COL).
-Total time spent: 472
+Total time spent: 526
