@@ -112,6 +112,7 @@ BA  31- revert 2-12-0 C18: qfbsolve with default flag = previous behaviour
     35- bnfsunit is mostly obsolete, use bnfunits
     36- bnfisunit and bnfissunit: torsion unit exponent is now a t_INT (used
         to be a t_INTMOD)
+    37- support compact representation in nfeltmul, nfeltpow, nfeltdiv
 
   Added
      1- new GP function rootsof1
